@@ -2,20 +2,34 @@ package com.now.naaga.game.presentation.dto;
 
 import com.now.naaga.game.domain.Game;
 import com.now.naaga.place.presentation.dto.PlaceResponse;
+import com.now.naaga.player.presentation.dto.PlayerResponse;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public record GameResponse(Long id,
-                           PlaceResponse place,
-                           String gameStatus) {
+                           String startTime,
+                           String gameStatus,
+                           int remainingAttempts,
+                           CoordinateResponse startCoordinate,
+                           PlaceResponse destination,
+                           PlayerResponse player,
+                           List<HintResponse> hints) {
 
     public static GameResponse from(final Game game) {
-        return new GameResponse(game.getId(), PlaceResponse.from(game.getPlace()), game.getGameStatus().toString());
+        return new GameResponse(
+                game.getId(),
+                game.getStartTime().toString(),
+                game.getGameStatus().name(),
+                game.getRemainingAttempts(),
+                CoordinateResponse.of(game.getStartPosition()),
+                PlaceResponse.from(game.getPlace()),
+                PlayerResponse.from(game.getPlayer()),
+                HintResponse.convertToHintResponses(game.getHints())
+        );
     }
 
     public static List<GameResponse> convertToGameResponses(final List<Game> games) {
         return games.stream()
                 .map(GameResponse::from)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
